--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,38 +1,54 @@
 #include_directories(${CMAKE_SOURCE_DIR}/include)
 #message(STATUS "CMAKE_SOURCE_DIR: " ${CMAKE_SOURCE_DIR})
 
+add_library(angie_core STATIC "")
+
 # Shared resources
 set(HEADER_FILES
-        angie/core/system/system.hpp
-        angie/core/config.hpp
-        angie/core/defines.hpp
-        angie/core/version.hpp)
+        ${ANGIE_INCLUDE_DIR}/angie/core/base.hpp
+        ${ANGIE_INCLUDE_DIR}/angie/core/types.hpp
+        ${ANGIE_INCLUDE_DIR}/angie/core/config.hpp
+        ${ANGIE_INCLUDE_DIR}/angie/core/defines.hpp
+        ${ANGIE_INCLUDE_DIR}/angie/core/version.hpp
+        ${ANGIE_INCLUDE_DIR}/angie/core/utils.hpp)
+
+set(INTERFACE_FILES
+        ${ANGIE_INCLUDE_DIR}/angie/core/memory/global.hpp
+        ${ANGIE_INCLUDE_DIR}/angie/core/system/system.hpp)
 
 set(SOURCE_FILES
         memory/global.cpp
         system/system.cpp)
 
-add_library(angie_core STATIC ${SOURCE_FILES})
+set(IMPLEMENTATION_FILES
+        memory/impl/global_impl.hpp
+        system/impl/system_impl.hpp)
 
-# Include external directories
-include_directories(../../externals)
+set(SOURCE_MEMORY_FILES "")
+set(SOURCE_SYSTEM_FILES "")
 
-# Memory - ltalloc
-if (angie_memory_global_ltalloc)
-    set(SOURCE_MEMORY_FILES
+# Memory
+if (angie_memory_global_ltalloc) # ltalloc
+    list(APPEND SOURCE_MEMORY_FILES
             ../../externals/ltalloc/ltalloc.cc
             memory/impl/ltalloc/global_ltalloc.cpp)
 
     set_source_files_properties(../../externals/ltalloc/ltalloc.cc
             PROPERTIES
-            COMPILE_DEFINITIONS LTALLOC_DISABLE_OPERATOR_NEW_OVERRIDE)
+            COMPILE_DEFINITIONS LTALLOC_DISABLE_OPERATOR_NEW_OVERRIDE
+            LANGUAGE C)
 
-    target_sources(angie_core PRIVATE ${SOURCE_MEMORY_FILES})
+    message(STATUS "Memory manager: ltalloc")
+else() # default system alloctor
+    list(APPEND SOURCE_MEMORY_FILES
+            memory/impl/default/global_default.cpp)
+
+    message(STATUS "Memory manager: system")
 endif()
 
 # System - plibsys
 if (angie_system_plibsys)
-    set(SOURCE_SYSTEM_FILES
+    list(APPEND SOURCE_SYSTEM_FILES
             system/impl/plibsys/system_plibsys.cpp)
 
     target_sources(angie_core PRIVATE ${SOURCE_SYSTEM_FILES})
@@ -49,7 +65,17 @@ if (angie_system_plibsys)
     #        "\nCURRENT_BINARY_DIR: " ${CMAKE_CURRENT_BINARY_DIR})
     include_directories(${PLIBSYS_DIR}/src ${CMAKE_BINARY_DIR})
     target_link_libraries(angie_core plibsysstatic)
+
+    message(STATUS "System: plibsys")
 endif()
 
-set_target_properties(angie_core PROPERTIES FOLDER "angie")
+# Add source files
+target_sources(angie_core PUBLIC ${HEADER_FILES})
+target_sources(angie_core PUBLIC ${INTERFACE_FILES})
+target_sources(angie_core PRIVATE ${SOURCE_FILES})
+target_sources(angie_core PRIVATE ${IMPLEMENTATION_FILES})
+target_sources(angie_core PRIVATE ${SOURCE_MEMORY_FILES})
+target_sources(angie_core PRIVATE ${SOURCE_SYSTEM_FILES})
+
+set_target_properties(angie_core PROPERTIES FOLDER "angie/core")
 install(TARGETS angie_core DESTINATION lib)
