--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "externals/stb"]
 	path = externals/stb
 	url = https://github.com/nothings/stb.git
-[submodule "externals/dbgbtools"]
-	path = externals/dbgbtools
+[submodule "externals/dbgtools"]
+	path = externals/dbgtools
 	url = https://github.com/wc-duck/dbgtools.git
