--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "externals/dbgtools"]
 	path = externals/dbgtools
 	url = https://github.com/wc-duck/dbgtools.git
+[submodule "tools/emsdk"]
+	path = tools/emsdk
+	url = https://github.com/juj/emsdk.git
