--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CPACK_PACKAGE_VERSION_BUILD ${BUILD_TIME})
 option(angie_config_profile "Use profile configuration" OFF)
 option(angie_memory_global_ltalloc "Use ltalloc for global memory" ON)
 option(angie_system_plibsys "Use plibsys as base system library" ON)
-option(angie_debug_tools "Use programmatic debug tools" OFF)
+option(angie_debug_tools "Use programmatic debug tools" ON)
 option(angie_cpu_libcpuid "Use libcpuid to detect cpu info" ON)
 
 # Profile configuration
@@ -54,45 +54,47 @@ if (CMAKE_BUILD_TYPE MATCHES "Debug")
 endif()
 
 function (angie_detect_os_arch result)
-        if (CMAKE_SIZEOF_VOID_P EQUAL 8)
-                set (ANGIE_OS_ARCH 64)
-        else()
-                set (ANGIE_OS_ARCH 32)
-        endif()
+	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+		set (ANGIE_OS_ARCH 64)
+	else()
+		set (ANGIE_OS_ARCH 32)
+	endif()
 
-        set (${result} ${ANGIE_OS_ARCH} PARENT_SCOPE)
+	set (${result} ${ANGIE_OS_ARCH} PARENT_SCOPE)
 endfunction (angie_detect_os_arch)
 
 function (angie_detect_cpu_arch result)
-        if (CMAKE_SYSTEM_PROCESSOR MATCHES "(i[1-9]86)|(x86_64)")
-                if (CMAKE_CROSSCOMPILING)
-                        if (CMAKE_SYSTEM_PROCESSOR MATCHES "i[1-9]86")
-                                set (ANGIE_CPU_ARCH "x86")
-                        else()
-                                set (ANGIE_CPU_ARCH "x64")
-                        endif()
-                else()
-                        angie_detect_os_arch(ANGIE_OS_BITS)
-                        if (ANGIE_OS_BITS STREQUAL "32")
-                                set (ANGIE_CPU_ARCH "x86")
-                        else()
-                                set (ANGIE_CPU_ARCH "x64")
-                        endif()
-                endif()
-        else()
-                set (ANGIE_CPU_ARCH ${CMAKE_SYSTEM_PROCESSOR})
-        endif()
+	if (CMAKE_SYSTEM_PROCESSOR MATCHES "(i[1-9]86)|(x86_64)")
+		if (CMAKE_CROSSCOMPILING)
+			if (CMAKE_SYSTEM_PROCESSOR MATCHES "i[1-9]86")
+				set (ANGIE_CPU_ARCH "x86")
+			else()
+				set (ANGIE_CPU_ARCH "x64")
+			endif()
+		else()
+			angie_detect_os_arch(ANGIE_OS_BITS)
+			if (ANGIE_OS_BITS STREQUAL "32")
+				set (ANGIE_CPU_ARCH "x86")
+			else()
+				set (ANGIE_CPU_ARCH "x64")
+			endif()
+		endif()
+	else()
+			set (ANGIE_CPU_ARCH ${CMAKE_SYSTEM_PROCESSOR})
+	endif()
 
-        set (${result} ${ANGIE_CPU_ARCH} PARENT_SCOPE)
+	set (${result} ${ANGIE_CPU_ARCH} PARENT_SCOPE)
 endfunction (angie_detect_cpu_arch)
 
 # OS bits possible values 32|64
 set(ANGIE_OS_BITS "")
 angie_detect_os_arch(ANGIE_OS_BITS)
+message(STATUS "ANGIE_OS_BITS: " ${ANGIE_OS_BITS})
 
 # CPU architecture possible values x86|x64|ARM|ARM64
 set(ANGIE_CPU_ARCH "")
 angie_detect_cpu_arch(ANGIE_CPU_ARCH)
+message(STATUS "ANGIE_CPU_ARCH: " ${ANGIE_CPU_ARCH})
 
 # Add lib core directory
 add_subdirectory(src/core)
