Get dynamic array implementation ready to be used with cache friendly data layout

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -23,6 +23,7 @@ set(INTERFACE_FILES
 	${ANGIE_INCLUDE_DIR}/angie/core/memory/allocator.hpp
 	${ANGIE_INCLUDE_DIR}/angie/core/containers/common.hpp
 	${ANGIE_INCLUDE_DIR}/angie/core/containers/dynamic_array.hpp
+	${ANGIE_INCLUDE_DIR}/angie/core/string/dynamic_string.hpp
 	${ANGIE_INCLUDE_DIR}/angie/core/system/system.hpp
 	${ANGIE_INCLUDE_DIR}/angie/core/system/report.hpp
 	${ANGIE_INCLUDE_DIR}/angie/core/system/cpu.hpp)
