--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,10 @@ set(CPACK_PACKAGE_VERSION_BUILD ${BUILD_TIME})
 
 # Set of options
 option(angie_config_profile "Use profile configuration" OFF)
-option(angie_memory_global_ltalloc "Use ltalloc for global memory" OFF)
+option(angie_memory_global_ltalloc "Use ltalloc for global memory" ON)
 option(angie_system_plibsys "Use plibsys as base system library" OFF)
 option(angie_debug_tools "Use programmatic debug tools" ON)
+option(angie_string_sds "Use sds string library" ON)
 option(angie_cpu_libcpuid "Use libcpuid to detect cpu info" OFF)
 option(angie_cpu_google_features "Use cpu_features to detect cpu info" OFF)
 option(angie_cpu_pytroch_cpuinfo "User cpuinfo to detect cpu info" ON)
