string can be constructed from literals

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ set(CPACK_PACKAGE_VERSION_BUILD ${BUILD_TIME})
 option(angie_config_profile "Use profile configuration" OFF)
 option(angie_memory_global_ltalloc "Use ltalloc for global memory" OFF)
 option(angie_system_plibsys "Use plibsys as base system library" OFF)
-option(angie_debug_tools "Use programmatic debug tools" ON)
+option(angie_debug_tools "Use programmatic debug tools" OFF)
 option(angie_string_sds "Use sds string library" OFF)
 option(angie_string_stb "Use stb string library" ON)
 option(angie_cpu_libcpuid "Use libcpuid to detect cpu info" OFF)
@@ -53,11 +53,6 @@ include_directories(externals)
 # although, you can switch to any build type you like, or combine them.
 # E.g. "Debug|Profile"
 message(STATUS "CMAKE_BUILD_TYPE: " ${CMAKE_BUILD_TYPE})
-if (CMAKE_BUILD_TYPE MATCHES "Debug")
-    set(angie_debug_tools ON)
-    include_directories(externals/dbgtools/include)
-    add_definitions(-D_DEBUG_TOOLS)
-endif()
 
 function (angie_detect_os_arch result)
 	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
